Fix alignment of images in "info-section" part

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 body {
     display: flex;
     flex-direction: column;
@@ -84,18 +86,23 @@ button.sign-up {
     color: white;
 }
 
+.info-section {
+    text-align: center;
+}
+
 .info-header-text {
 
     font-size: 36px;
     color: #1F2937;
     font-weight: 800;
-    text-align: center;
+    /* text-align: center; */
     margin-top: 32px;
     margin-bottom: 32px;
 }
 
 .info .text {
-    text-align: center;
+    /* text-align: center; */
+    font-family: Roboto;
 }
 
 .info-container {
